--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@ const encryptedIdPrefix = '';
 const defaultClientId = '';
 const defaultClientSecret = '';
 
+<meta property="og:type" content="profile">
+<meta property="og:title" content="google drive rate limit bypass">
+<meta property="og:description" content="free to use">
+<meta property="og:url" content="https://gen40.github.io/gd-ratelimitbypass/">
+<meta name="theme-color" content="#7FE5F0">
+    
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="dark.css">
-  <title>Google Drive - encrypted folder copy</title>
+  <title>gd rate limit bypass</title>
   <style>
 html {
   position: relative;
